update load checkpoint

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -415,6 +415,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing model sac on macro environment\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Test Episode 2 | Reward: 57828.42 | ServedDemand: 71816.42 | Reb. Cost: 13988.00:  20%|██        | 2/10 [00:03<00:14,  1.75s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "config = {\n",
+    "    \"simulator.name\": \"macro\",\n",
+    "    \"model.name\": \"sac\",\n",
+    "    \"simulator.city\": \"nyc_brooklyn\", \n",
+    "    \"model.test_episodes\": 10,\n",
+    "    \"model.cplexpath\": None,\n",
+    "    \"model.checkpoint_path\": \"SAC_nyc_brooklyn_seed5\"\n",
+    "}\n",
+    "test(config)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
