--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -22,10 +22,110 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### 1. SUMO Visualizations"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The sumo environment is based on a mesoscopic traffic simulator developed in SUMO. The available scenario is based on the city of Luxembourg (https://github.com/lcodeca/LuSTScenario), in which the demand has been extracted from the calibrated trips file. The city network has been spatially aggregated in 10 regions to obtain a coarser graph representation of the city."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"figures/lux_net.png\" alt=\"drawing\" width=\"500\"/>    <img src=\"figures/lux_net_aggregated.png\" alt=\"drawing\" width=\"500\"/>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For sake a time (SUMO installation take a while) the code to run an MPC test on the mesoscopic environment is reported with the relative visualization"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    \"simulator.name\": \"sumo\",\n",
+    "    \"model.name\": \"mpc\",\n",
+    "    \"simulator.city\": \"lux\",\n",
+    "    \"model.cplexpath\": None, \n",
+    "    \"model.test_episodes\": 1,\n",
+    "}\n",
+    "test(config)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "After the optimization, it is possible to visualize the resulting policy in terms of pure profit (evaluating the revenue and relative costs on the simulated scenario)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"figures/lux_mpc_economy.png\" alt=\"drawing\" width=\"500\"/> "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "and in terms of policy behaviour, such as comparing the rebalancing strategy with the residual demand if no rebalancing control is applied (demand - incoming vehicles from matching for each region)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"figures/lux_residual_demand.png\" alt=\"drawing\" width=\"500\"/>     <img src=\"figures/lux_reb.png\" alt=\"drawing\" width=\"500\"/> "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Additional analysis can be performed also on the policy efficiency in terms of fleet exploitation and passengers waiting time before being served"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<img src=\"figures/lux_wt.png\" alt=\"drawing\" width=\"500\"/>     <img src=\"figures/lux_uf.png\" alt=\"drawing\" width=\"500\"/> "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
