Deleting main files

--- a/tutorial_caro.ipynb
+++ b/tutorial_caro.ipynb
@@ -24,7 +24,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. SUMO Visualizations"
+    "### 1. SUMO environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sumo environment is based on a mesoscopic traffic simulator developed in SUMO. The available scenario is based on the city of Luxembourg (https://github.com/lcodeca/LuSTScenario), in which the demand has been extracted from the calibrated trips file. The city network has been spatially aggregated in 10 regions to obtain a coarser graph representation of the city."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/lux_net.png\" alt=\"drawing\" width=\"500\"/>    <img src=\"figures/lux_net_aggregated.png\" alt=\"drawing\" width=\"500\"/>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    \"simulator.name\": \"sumo\",\n",
+    "    \"model.name\": \"mpc\",\n",
+    "    \"simulator.city\": \"lux\",\n",
+    "    \"model.cplexpath\": None, \n",
+    "    \"model.test_episodes\": 1,\n",
+    "}\n",
+    "test(config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the optimization, it is possible to visualize the resulting policy in terms of pure profit (evaluating the revenue and relative costs on the simulated scenario)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/lux_mpc_economy.png\" alt=\"drawing\" width=\"500\"/> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and in terms of policy behaviour, such as comparing the rebalancing strategy with the residual demand if no rebalancing control is applied (demand - incoming vehicles from matching for each region)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/lux_residual_demand.png\" alt=\"drawing\" width=\"500\"/>     <img src=\"figures/lux_reb.png\" alt=\"drawing\" width=\"500\"/> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additional analysis can be performed also on the policy efficiency in terms of fleet exploitation and passengers waiting time before being served"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"figures/lux_wt.png\" alt=\"drawing\" width=\"500\"/>     <img src=\"figures/lux_uf.png\" alt=\"drawing\" width=\"500\"/> "
    ]
   },
   {
@@ -39,13 +111,6 @@
    "metadata": {},
    "source": [
     "The macro envorinment is based on taxi record data colleted in various city, e.g. New York City, San Francisco, Washignton DC, Shenzhen. In each scenarion, the road network is segmented into stations by clustering junctions such that the travel time within each station is upper-bounded by a given error tolerance. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"figures/washington_dc.png\" alt=\"drawing\" width=\"250\"/>"
    ]
   },
   {
@@ -479,7 +544,8 @@
     "\n",
     "action = actor(state)\n",
     "\n",
-    "action"
+    "action\n",
+    "#add histogram "
    ]
   },
   {
@@ -502,15 +568,14 @@
     "    def __init__(self, in_channels, hidden_size=32):\n",
     "        super().__init__()\n",
     "        self.in_channels = in_channels\n",
-    "        self.conv1 = TODO\n",
+    "   \n",
     "\n",
     "        self.lin1 = nn.Linear(in_channels, hidden_size)\n",
     "        self.lin2 = nn.Linear(hidden_size, hidden_size)\n",
     "        self.lin3 = nn.Linear(hidden_size, 1)\n",
     "\n",
     "    def forward(self, state, edge_index):\n",
-    "        out = TODO\n",
-    "\n",
+    "       \n",
     "        x = F.leaky_relu(self.lin1(x))\n",
     "        x = F.leaky_relu(self.lin2(x))\n",
     "        x = F.softplus(self.lin3(x))\n",
@@ -672,16 +737,11 @@
     "    \"model.name\": \"sac\",\n",
     "    \"simulator.city\": \"nyc_brooklyn\",\n",
     "    \"model.cplexpath\": None, \n",
-    "    \"model.checkpoint_path\": \"SAC_custom\",\n",
+    "    \"model.checkpoint_path\": \"SAC_custom\", #this will automatically load the best model checkpoint\n",
     "    \"model.test_episodes\": 1,\n",
     "}\n",
     "test(config)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
