error in import

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from testings import test\n",
+    "from testing import test\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
