--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -582,8 +582,8 @@
    ],
    "source": [
     "state = torch.ones(14, 13) \n",
-    "edge_index  = torch.tensor([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13],\n",
-    "                            [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0]])\n",
+    "edge_index = torch.tensor([[0, 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8, 8, 9, 9, 10, 10, 11, 11, 12, 12, 13],\n",
+    "                           [1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 7, 6, 8, 7, 9, 8, 10, 9, 11, 10, 12, 11, 13, 12]])\n",
     "\n",
     "actor = GNNActor(in_channels=13)\n",
     "\n",
