--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -18,7 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook offers an interactive, hands-on session for benchmarking AMoD controllers across different simulation fidelities (macro and meso). It includes both domain-driven heuristic controllers and learning-based methods."
+    "Join us in moving the first steps toward the creation of publicly available benchmarks, datasets, and simulators for network-level coordination of MoD systems.\n",
+    "\n",
+    "This notebook offers an interactive, hands-on session for benchmarking AMoD controllers across \n",
+    "- openly accessible simulation platforms across different fidelity levels \n",
+    "- calibareted scenarios calibrat \n",
+    "- Implementation of fleet coordination algorithms"
    ]
   },
   {
